--- a/src/app/App.module.css
+++ b/src/app/App.module.css
@@ -7,3 +7,15 @@
 
     background-color: #F9F9F9;
 }
+
+@media screen and (max-width: 600px) {
+    .App {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        height: 100%;
+
+    }
+
+}
